--- a/sass/_colorportal__accordion.scss
+++ b/sass/_colorportal__accordion.scss
@@ -43,7 +43,7 @@
           padding: 0.75rem 0 1.75rem 0;
           &--section-one {
             display: flex;
-            width: 40%;
+            width: 45%;
             max-width: 400px;
             @media only screen and (min-width: 1200px) {
               max-width: 510px;
@@ -64,7 +64,7 @@
           }
           &--section-two {
             display: flex;
-            width: 60%;
+            width: 55%;
             & .item {
               min-width: 10rem;
               @media only screen and (min-width: 1200px) {
